--- a/src/Desktop/Gellary.css
+++ b/src/Desktop/Gellary.css
@@ -1,37 +1,17 @@
 .swiper-slide {
-    /* position: absolute; */
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* display: inline; */
-    /* z-index: 0; */
-
-    /* justify-content: space-around;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    text-align: center;
-    align-items: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center; */
-
-    position: relative;
-
-    /* width: 100%; */
     height: 100%;
     box-sizing: content-box;
 
     transition-property: transform;
     justify-content: space-around;
 
-    /* display: flex; */
-    /* flex-direction: row; */
+    position: relative;
 
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
 
+    vertical-align: center;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     -webkit-justify-content: center;
@@ -43,44 +23,56 @@
 }
 
 .swiper {
-    /* margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
-    overflow: hidden;
-    position: relative; */
-
-    /* overflow: hidden; */
-    /* list-style: none; */
-    /* display: inline; */
-    z-index: 0;
-
-    /* display: flex; */
-    /* flex-direction: row; */
-
-    /* flex-flow: row nowrap; */
-
-    /* -webkit-box-orient: horizontal;
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-
-    -webkit-box-lines: single;
-    -moz-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap; */
-
-    /* margin-left: auto; */
-    /* margin-right: auto; */
     position: relative;
     padding: 0;
+    z-index: 0;
 }
+
 
 .imgs {
-    height: 40rem;
+    width: 50%;
+    display: block;
 }
 
-/* .gallery-image-slide {
-    gap: 10%;
-} */
+/* margin-left: auto; */
+/* margin-right: auto; */
+/* width: 100%; */
+/* height: 100%; */
+/* flex-direction: row; */
+/* overflow: hidden; */
+/* position: relative; */
+/* overflow: hidden; */
+/* list-style: none; */
+/* display: inline; */
+/* display: flex; */
+/* flex-direction: row; */
+/* flex-flow: row nowrap; */
+/* -webkit-box-orient: horizontal; */
+/* -moz-flex-direction: row; */
+/* -ms-flex-direction: row; */
+/* flex-direction: row; */
+/* -webkit-box-lines: single; */
+/* -moz-flex-wrap: nowrap; */
+/* -ms-flex-wrap: nowrap; */
+/* flex-wrap: nowrap; */
+/* margin-left: auto; */
+/* margin-right: auto; */
+
+/* position: absolute; */
+/* display: flex; */
+/* flex-direction: row; */
+/* display: inline; */
+/* z-index: 0; */
+/* justify-content: space-around; */
+/* display: -webkit-box; */
+/* display: -ms-flexbox; */
+/* display: -webkit-flex; */
+/* text-align: center; */
+/* align-items: center; */
+/* align-items: center; */
+/* -webkit-box-pack: center; */
+/* -ms-flex-pack: center; */
+/* -webkit-justify-content: center; */
+/* width: 100%; */
+/* display: flex; */
+/* flex-direction: row; */
