--- a/src/Desktop/Gellary.css
+++ b/src/Desktop/Gellary.css
@@ -1,25 +1,7 @@
-.swiper-slide {
-    height: 100%;
-    box-sizing: content-box;
-
-    transition-property: transform;
-    justify-content: space-around;
-
-    position: relative;
-
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-
-    vertical-align: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
+.slideWrapper {
     text-align: center;
-    align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .swiper {
@@ -28,10 +10,21 @@
     z-index: 0;
 }
 
+.swiper-slide {
+    text-align: center;
+}
 
-.imgs {
-    width: 50%;
-    display: block;
+.swiper-slide img {
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    transition: transform 0.15s, filter 0.15s;
+    transform: scale(0.75);
+    filter: brightness(55%);
+    /* 
+    transform: scale(1);
+    filter: brightness(100%);
+     */
 }
 
 /* margin-left: auto; */
@@ -76,3 +69,25 @@
 /* width: 100%; */
 /* display: flex; */
 /* flex-direction: row; */
+/* .swiper-slide {
+    box-sizing: content-box;
+
+    transition-property: transform;
+    justify-content: space-around;
+
+    position: relative;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+
+    vertical-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    text-align: center;
+    align-items: center;
+} */
